<resources>
    <string name="app_name">Weather</string>

    <string name="input_hint_username">Username</string>
    <string name="input_hint_password">Password</string>
    <string name="action_login">Login</string>
    <string name="btn_label_login">Login</string>
    <string name="btn_label_register_from_login">No account yet? Click to register!</string>
    <string name="input_hint_firstname">First Name</string>
    <string name="input_hint_lastname">Last Name</string>
    <string name="btn_label_register">Register</string>
    <string name="btn_label_login_from_reg">Already registered? Click to login!</string>
    <string name="action_register">Register</string>
    <string name="login_res_failed">Login Failed</string>
    <string name="registration_res_failed">Registration Failed</string>
    <string name="login_res_success">Login Success</string>
    <string name="registration_res_success">Registration Success</string>
    <string name="weather_res_failed_offline">Error: Failed to fetch current weather. You may be offline.</string>
    <string name="weather_res_failed">Error: Failed to fetch current weather</string>
    <string name="weather_res_success">Fetched current weather!</string>
    <string name="tab_current">Current</string>
    <string name="tab_history">History</string>
    <string name="weather_history_res_failed">Error: Failed to load saved weather history.</string>
    <string name="weather_history_res_success">Weather History loaded!</string>
    <string name="current_weather_res_success">Current weather fetched!</string>

    <string name="formatted_location_data">%1$s, %2$s</string>
    <string name="formatted_weather_icon_url">%1$s%2$s@2x.png</string>
    <string name="formatted_temperature_data">%1$s°C</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="formatted_weather_name">%1$s (%2$s)</string>
    <string name="location_permission_rationale">Until Location permission is granted, we\'ll fetch weather data for Taguig City, PH.</string>
    <string name="location_retrieve_rationale">Thanks for granting permission to access your location. But until location is successfully retrieved from your device, we\'ll fetch weather data for Taguig City, PH.</string>
    <string name="not_granted_title">Location Permission Not Granted</string>
    <string name="not_retrieve_title">Sorry, but we cannot retrieve your device\'s location.</string>

</resources>